# hexagonal-architecture-job-worker-

./: .gitignore  AGENTS.md  README.md  docker-compose.yml
backend/: Dockerfile  pyproject.toml
backend/src/app/: main.py  worker.py
backend/src/app/adapters/inbound/api/: job_router.py
backend/src/app/adapters/inbound/sse/: job_sse.py
backend/src/app/adapters/outbound/messaging/: redis_event_publisher.py
backend/src/app/adapters/outbound/notification/: discord_notification_sender.py  email_notification_sender.py  notification_sender_factory.py  null_notification_sender.py
backend/src/app/adapters/outbound/persistence/: database.py  models.py  postgres_job_repository.py
backend/src/app/domain/: exceptions.py
backend/src/app/domain/events/: job_events.py
backend/src/app/domain/models/: job.py  notification.py
backend/src/app/ports/: event_publisher.py  notification_sender.py  repository.py
backend/src/app/usecases/: cancel_job.py  create_job.py  get_job.py  list_jobs.py
docs/backend/: 00_introduction.md  01_fastapi_python_redis.md  02_ddd.md  03_hexagonal.md  04_app_structure.md  05_core_flows.md  06_messaging_worker.md  07_data_model.md  08_reading_tips.md  09_asyncio_concurrency.md  README.md
frontend/: Dockerfile  index.html  package.json  vite.config.ts
frontend/src/: App.tsx
frontend/src/api/: jobApi.ts
frontend/src/components/: JobCreateForm.tsx  JobList.tsx  JobStatusBadge.tsx
frontend/src/hooks/: useJobSSE.ts
openspec/specs/backend-docs/: spec.md
openspec/specs/frontend-ui/: spec.md
openspec/specs/job-management/: spec.md
(+21 files in other folders)
